bin/testsuite/tests/compiler/src/errors/compiler4772.swg
#global testerror "Err0430"
func while()
{
}